--- a/.htaccess
+++ b/.htaccess
@@ -1,5 +1,7 @@
 RewriteEngine on
 
-RewriteEngine On
+RewriteCond %{HTTP_HOST} ^www.jiangshanyu.com$
+RewriteRule ^/?(.*)$ https://jiangshanyu.com/$1 [R=301,L]
+
 RewriteCond %{HTTPS} off
-RewriteRule ^(.*)$ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
+RewriteRule (.*) https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
